# sensor-lib

./: .gitignore  CMakeLists.txt  README.md  distributed-bluetooth-link-test.sh  distributed-link-test.sh
bratislava-socket/include/: BratislavaSocket.h
bratislava-socket/src/: BratislavaSocket.cc  BratislavaSocketCompat.h  BratislavaSocketImpl.h  BratislavaSocketRegistry.cc  BratislavaSocketRegistry.h
bratislava-socket/src/adapters/: BaseAdapter.h
bratislava-socket/src/adapters/bluetooth/: BluetoothAdapter.cc  BluetoothAdapter.h
bratislava-socket/src/adapters/wifi/: WifiAdapter.cc  WifiAdapter.h
examples/c/: CMakeLists.txt  bluetoothExample.c
examples/cc/: CMakeLists.txt  bluetoothExample.cc  demoApp.cc  exampleCMakeLists.txt  linkExample.cc  simulationExample.cc  socketExample.cc  standaloneTelemetryExample.cc  telemetryExample.cc  wifiExample.cc
interfaces/c/: action_typedef.h  bluetooth_typedef.h  callback_typedef.h  comms_typedef.h  gps_typedef.h  instrument_api.h  logger_typedef.h  rssi_typedef.h  sensing_typedef.h  sensor_api.h  simstate_typedef.h  wifi_typedef.h
src/: bluetooth_scanner.h  bluez_scanner.c  comms_runtime.cpp  comms_runtime.h  hci_scanner.c  instrument_api.c  wifi_scanner_bridge.cpp  wifi_scanner_bridge.h
tests/: instrument_cli.c  link_callback_harness.c  link_callback_harness.h  link_callback_test.c  repeat_sensing_test.c
